--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     },
     "dependencies": {
         "arweave": "^1.10.11",
-        "module-alias": "^2.2.2"
+        "module-alias": "^2.2.2",
+        "typescript": "^4.1.3"
     },
     "devDependencies": {
         "@types/node": "^14.14.35",
@@ -20,8 +21,7 @@
         "eslint-config-airbnb-base": "^14.2.1",
         "eslint-config-airbnb-typescript": "^12.0.0",
         "eslint-config-prettier": "^8.1.0",
-        "eslint-plugin-import": "^2.22.1",
-        "typescript": "^4.1.3"
+        "eslint-plugin-import": "^2.22.1"
     },
     "_moduleAliases": {
         "@": "src/"
