--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "arweave": "^1.10.11",
         "module-alias": "^2.2.2",
+        "smartweave": "^0.4.29",
         "typescript": "^4.1.3"
     },
     "devDependencies": {
