--- a/package.json
+++ b/package.json
@@ -5,24 +5,27 @@
     "types": "dist/index.d.ts",
     "license": "MIT",
     "author": "Lancelot Owczarczak <lancelot@pianity.com>, Kevin Primicerio <kevin@pianity.com>",
+    "engines": {
+        "node": ">=16.13.0"
+    },
     "scripts": {
         "build": "tsc",
         "install": "yarn build"
     },
     "dependencies": {
-        "arweave": "^1.10.13",
+        "arweave": "^1.10.18",
         "module-alias": "^2.2.2",
-        "smartweave": "^0.4.29",
-        "typescript": "^4.1.29"
+        "smartweave": "^0.4.46",
+        "typescript": "^4.5.2"
     },
     "devDependencies": {
-        "@types/node": "^14.14.35",
-        "eslint": "^7.21.0",
-        "eslint-config-airbnb": "^18.2.1",
-        "eslint-config-airbnb-base": "^14.2.1",
-        "eslint-config-airbnb-typescript": "^12.0.0",
+        "@types/node": "^16.11.11",
+        "eslint": "^8.3.0",
+        "eslint-config-airbnb": "^19.0.1",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-airbnb-typescript": "^16.1.0",
         "eslint-config-prettier": "^8.1.0",
-        "eslint-plugin-import": "^2.22.1"
+        "eslint-plugin-import": "^2.25.3"
     },
     "_moduleAliases": {
         "@": "src/"
