--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,23 @@
 {
     "compilerOptions": {
-        "module": "CommonJS",
-        "target": "ES5",
+        "target": "es2021",
+        "lib": ["es2021"],
+        "module": "commonjs",
         "strict": true,
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
+        "allowJs": false,
         "noImplicitAny": true,
         "noImplicitReturns": true,
-        "allowJs": false,
-        "moduleResolution": "node",
-        "resolveJsonModule": true,
-        "declaration": true,
+        "strictNullChecks": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
-        "baseUrl": "src/",
+        "resolveJsonModule": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "declaration": true,
         "outDir": "./dist",
+        "baseUrl": "src/",
         "paths": {
             "@/*": ["*"]
         }
