--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
         "install": "yarn build"
     },
     "dependencies": {
-        "arweave": "^1.10.23",
-        "module-alias": "^2.2.2",
-        "smartweave": "^0.4.46",
+        "arweave": "1.11.4",
         "typescript": "^4.5.5"
     },
     "devDependencies": {
@@ -26,8 +24,5 @@
         "eslint-config-airbnb-typescript": "^16.1.0",
         "eslint-config-prettier": "^8.1.0",
         "eslint-plugin-import": "^2.25.3"
-    },
-    "_moduleAliases": {
-        "@": "src/"
     }
 }
